--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Minimal Privacy Policy</title>
  </head>
  <body>
+  <h1>Privacy Policy</h1>
   <p>No data is collected.</p>
  </body>
 </html>
