--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  </head>
  <body>
   <h1>Privacy Policy</h1>
-  <p>No data is collected.</p>
+  <p>No personal data is collected or retained.</p>
  </body>
 </html>
