--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  </head>
  <body>
   <h1>Privacy Policy</h1>
-  <h2>No personal data is collected or retained.</h2>
+  <h2>No personal information is collected or retained.</h2>
  </body>
 </html>
